--- a/lib/synchronizable/locale/ru.yml
+++ b/lib/synchronizable/locale/ru.yml
@@ -2,7 +2,9 @@
 ru:
   errors:
     missed_remote_id: В хэше не указан remote id %{remote_id}
-    import_error: >
-      Ошибка при импорте %{model_klass}: %{error_message}.
-      запись: %{record}; атрибуты: %{mapped_attrs};
-      оригинальные атрибуты: %{attrs}
+    import_error: 'Ошибка при импорте %{model}: %{error}'
+  messages:
+    result: >
+      Синхронизация %{model}.
+      Количество записей до: %{before}, количество записей после: %{after},
+      количество удаленных записей: %{deleted}, количество ошибок: %{errors}
