refactored, fixed several bugs, first tests for dummy app models

--- a/lib/synchronizable/locale/ru.yml
+++ b/lib/synchronizable/locale/ru.yml
@@ -1,7 +1,7 @@
 ---
 ru:
   errors:
-    missed_remote_id: В хэше не указан remote id %{remote_id}
+    missed_remote_id: В хэше не указан remote id '%{remote_id}'
     import_error: 'Ошибка при импорте %{model}: %{error}'
   messages:
     result: >
