--- a/lib/synchronizable/locale/en.yml
+++ b/lib/synchronizable/locale/en.yml
@@ -1,7 +1,7 @@
 ---
 en:
   errors:
-    missed_remote_id: Couldn't find remote id %{remote_id} in given data hash
+    missed_remote_id: Couldn't find remote id '%{remote_id}' in given data hash
     import_error: '%{model} import error: %{error}'
   messages:
     result: >
