--- a/lib/synchronizable/locale/ru.yml
+++ b/lib/synchronizable/locale/ru.yml
@@ -2,6 +2,7 @@
 ru:
   errors:
     missed_remote_id: В хэше не указан remote id '%{remote_id}'
+    missed_associations: В хэше %{attrs} не указаны ассоциации %{keys}
     import_error: 'Ошибка при импорте %{model}: %{error}'
   messages:
     result: >
