add sync with ids array feature + specs, update TODO, better logging, small fixes

--- a/lib/synchronisable/locale/en.yml
+++ b/lib/synchronisable/locale/en.yml
@@ -12,6 +12,6 @@ en:
     gateway_method_missing: Method %{method} is not implemented for gateway
   messages:
     result: |
-      %{model} synchronization, parent: %{parent}.
-      Records before: %{before}, records after: %{after},
+      parent: %{parent},
+      records before: %{before}, records after: %{after},
       deleted records: %{deleted}, errors: %{errors}
