--- a/lib/synchronisable/locale/ru.yml
+++ b/lib/synchronisable/locale/ru.yml
@@ -16,3 +16,5 @@ ru:
       Синхронизация %{model}, родительская запись: %{parent}.
       Количество записей до: %{before}, количество записей после: %{after},
       количество удаленных записей: %{deleted}, количество ошибок: %{errors}
+    errors: >
+      Ошибки: %{errors}
